# receiptchecker

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  mise.toml  pyproject.toml
app/: anthropic.py  database.py  models.py  routes.py
migrations/: env.py
migrations/versions/: 949bdd7b8b93_lowercase_item_names.py  e578f75f531e_lowercase_categories.py  fff8c3848c24_initial.py
static/: dashboard.html  index.html  items.html
templates/: base.html  dashboard.html  index.html  items.html  receipts.html
