[project]
name = "receipt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.89.0",
    "fastapi[standard]>=0.135.3",
    "gspread>=6.2.1",
    "polars>=1.39.3",
    "python-multipart>=0.0.24",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
