[project]
name = "receipt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.89.0",
    "fastapi[standard]>=0.135.3",
    "python-multipart>=0.0.24",
    "rapidfuzz>=3.14.5",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.ruff]
exclude = ["migrations/versions"]

[tool.ty.src]
exclude = ["migrations/versions"]
